Kleopatra clipboard does not remember selected signing and --encrypt-to key.
Closed, ResolvedPublic

Assigned To
Authored By
• werner
Mar 17 2023, 1:25 PM
Tags

Description

In contrast to the file dialog the clipboard does not remember the selected sign as and encrypt-to key over a restart.

Details

Version
vsd 3.1.26

Event Timeline

• werner triaged this task as Normal priority.Mar 17 2023, 1:25 PM
• werner created this task.
• ikloecker changed the task status from Open to Testing.Mar 17 2023, 3:00 PM
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ikloecker added a subscriber: • ikloecker.

Fixed.

• ebo claimed this task.
• ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ebo added a subscriber: • ebo.

File dialog and notepad now share the last used signature and encryption to self key. Works.