Remember the keys used to sign/encrypt the notepad

GnuPG-bug-id: 6415